# nodus

./: .gitignore  README.md  main.py  profile.pyspy  profile_.pyspy  pyproject.toml
.devcontainer/: devcontainer.json
notes/Nodus/: Combat.md  idea dump.md  ideas.md
