[project]
name = "nodus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "austin-dist>=4.0.0",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "py-spy>=0.4.2",
    "pytest>=9.0.3",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.14",
]
